Improved W3C capabilities