@@ -1,11 +1,13 @@
 package net.serenitybdd.core.webdriver.driverproviders.webdrivermanager;
 
 import io.github.bonigarcia.wdm.WebDriverManager;
+import net.serenitybdd.core.webdriver.enhancers.CustomDriverEnhancer;
 import net.serenitybdd.core.webdriver.enhancers.WebDriverManagerEnhancer;
 import net.thucydides.core.ThucydidesSystemProperty;
 import net.thucydides.core.reflection.ClassFinder;
 import net.thucydides.core.util.EnvironmentVariables;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.List;
 
@@ -35,17 +37,17 @@ public class WebDriverManagerSetup {
             );
         }
 
-        customEnhancers.forEach(
-                enhancerType -> {
-                    try {
-                        WebDriverManagerEnhancer enhancer = (WebDriverManagerEnhancer) enhancerType.newInstance();
-                        enhancer.apply(webDriverManager);
-                    } catch (InstantiationException | IllegalAccessException e) {
-                        e.printStackTrace();
-                    }
-                }
-        );
-        return webDriverManager;
+        WebDriverManager enhancedDriverManager = webDriverManager;
+        for(Class<?> enhancerType : customEnhancers) {
+            try {
+                WebDriverManagerEnhancer enhancer
+                        = (WebDriverManagerEnhancer) enhancerType.getDeclaredConstructor().newInstance();
+                enhancedDriverManager = enhancer.apply(webDriverManager);
+            } catch (InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
+                e.printStackTrace();
+            }
+        }
+        return enhancedDriverManager;
     }
 
     public void forFirefox() {
